error.log
> Task :neoFormListLibraries UP-TO-DATE
> Task :cacheVersionManifest1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.1 UP-TO-DATE
> Task :cacheVersionExtractedServer1.21.1 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.1 UP-TO-DATE
> Task :create1.21.1ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.1_client-extra UP-TO-DATE
> Task :neoFormListTransformLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormTransformSource UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.1-20240808.144430 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.1.217 UP-TO-DATE

> Task :compileJava FAILED
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\screen\AlchemyTableMenu.java:17: error: cannot find symbol
    private final LevelAccess levelAccess;
                  ^
  symbol:   class LevelAccess
  location: class AlchemyTableMenu
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\block\AlchemyTableBlock.java:21: error: AlchemyTableBlock is not abstract and does not override abstract method codec() in BaseEntityBlock
public class AlchemyTableBlock extends BaseEntityBlock {
       ^
2 errors

[Incubating] Problems report is available at: file:///D:/neoforge-bokkchoy/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\block\AlchemyTableBlock.java:21: error: AlchemyTableBlock is not abstract and does not override abstract method codec() in BaseEntityBlock
  public class AlchemyTableBlock extends BaseEntityBlock {
         ^
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\screen\AlchemyTableMenu.java:17: error: cannot find symbol
      private final LevelAccess levelAccess;
                    ^
    symbol:   class LevelAccess
    location: class AlchemyTableMenu
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
23 actionable tasks: 1 executed, 22 up-to-date
